fix social media icons when opening the page in dark mode

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -128,7 +128,6 @@ a.socialicon {
   overflow: hidden;
   width: var(--link-size);
   height: var(--link-size);
-  background-color: #fff;
   margin: 8px;
   border-radius: 50%;
   box-shadow: 2px 5px 5px var(--shadow-col);
